# DELIFFAS

./: INSTALL.md  README.md
CudaRenderer/: README.md
CudaRenderer/cpp/cmakeTF2Linux/: CMakeLists.txt  submitCompile.sh
CudaRenderer/cpp/src/Renderer/: CUDABasedRasterization.cpp  CUDABasedRasterization.cu  CUDABasedRasterization.h  CUDABasedRasterizationBackUp.cu  CUDABasedRasterizationBackUp2.cu  CUDABasedRasterizationInput.h
CudaRenderer/cpp/src/TensorflowOperators/CudaRenderer/: CudaRenderer.cpp  CudaRenderer.h
CustomTensorFlowCPPOperators/cmakeTF2Linux/: CMakeLists.txt  submitBuild.sh
CustomTensorFlowCPPOperators/cmakeTF2Windows/: CMakeLists.txt
CustomTensorFlowCPPOperators/src/Skeletool/Mesh/: trimesh.cpp
Projects/AdditionalUtils/: CSVHelper.py  CameraReader.py  CreateMeshTensor.py  ImageHelper.py  MoveFiles.py  OBJReader.py  SetupServer.py  SkeletoolMeshesWriter.py
Projects/Architectures/: SpatialGCNN.py  UNet.py
Projects/CudaRenderer/: CudaRendererGPU.py  README.md  test_gradient_light.py  test_gradient_texture.py  test_gradient_vertex_colors.py  test_gradient_vertex_positions.py  test_render.py
Projects/CustomTFOperators/: CameraProjectionGPU.py  ChamferLoss.py  CppPath.py  DqSkinningGPU.py  EmbeddedGraphArapGpu.py  EmbeddedGraphGpu.py  ForwardKinematicsCpu.py  IsometryLoss.py  LaplacianEqualZeroLoss.py  LaplacianLoss.py  LbSkinningGPU.py  MultiViewSilhouetteLossGpu.py  PerspectiveNPointGPU.py  ProjectedMeshBoundaryGpu.py  VGGLoss19.py
Projects/DELIFFAS/: mainTestTrain.py
Projects/DELIFFAS/Configs/model_main/: config_vlad_test.sh  config_vlad_train.sh
Projects/DELIFFAS/Libs/Networks/: __init__.py  make_discriminator.py  make_encoder.py
Projects/DELIFFAS/Libs/Networks/model_main/: UNet.py
Projects/DELIFFAS/Libs/Runner/: __init__.py  make_runner.py
Projects/DELIFFAS/Libs/Runner/model_main/: run.py
Projects/DELIFFAS/Utils/: arg_parser.py  convert_utils.py
Projects/DELIFFAS/Utils/model_main/: create_model.py  depth_render.py  load_data.py  nerf_model.py
Projects/EvaluationScripts/: ChamferSequenceError.py  ChamferSequenceError.sh  ImageError.py  ImageErrorSequence.py  Lpips.py  submitLPIPS.sh
